# streams_api

./: Cargo.toml  Dockerfile  docker-compose.yml
migrations/: 0001_users_table.sql  0002_users_table.sql
src/: main.rs
src/config/: structure.rs
src/database/: connect.rs  migrate.rs  mod.rs
src/database/models/: model_user.rs
src/routes/: login_routes.rs
src/server/: mod.rs  server_start.rs
src/utils/: create_user.rs  hash_password.rs  mod.rs
