[package]
name = "streams-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
argon2 = "0.5.2"
dotenv = "0.15.0"
sqlx = { version = "0.7.2", features = ["runtime-async-std-native-tls", "postgres"] }

